--- a/css/header.css
+++ b/css/header.css
@@ -54,7 +54,7 @@ body.open-menu {
     top: 0;
     left: -100%;
     background-color: var(--main-bg-color);
-    width: 100%; 
+    width: 100vw; 
     height: 100%;
     min-height: 100vh;
     z-index: 9;
