--- a/css/products.css
+++ b/css/products.css
@@ -50,9 +50,10 @@
 .product__block {
     padding: 2rem;
     position: relative;
+
     max-width: 70rem;
     margin: 0 auto;
-    width: fit-content;
+    width: 100%;
     background: var(--main-bg-color);
 }
 
@@ -64,8 +65,8 @@
     position: relative;
     margin: 0 auto;
     margin-bottom: 1rem;
-    width: 30rem;
-    height: 30rem;
+    width: 20rem;
+    height: 20rem;
     background-color: var(--main-bg-color);
     padding: .5rem;
 }
